[gd_scene load_steps=7 format=2]

[ext_resource path="res://Opponent.gd" type="Script" id=1]
[ext_resource path="res://assets/3d/player_tex.png" type="Texture" id=2]
[ext_resource path="res://assets/Crash.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Burnout.wav" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]

[node name="Opponent" type="StaticBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
texture = ExtResource( 2 )

[node name="WallCollider" type="Area" parent="."]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="WallCollider"]
shape = SubResource( 2 )

[node name="PlayerColllider" type="Area" parent="."]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerColllider"]
shape = SubResource( 2 )

[node name="Crash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="Announcer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[connection signal="body_entered" from="WallCollider" to="." method="_on_WallCollider_body_entered"]
[connection signal="body_entered" from="PlayerColllider" to="." method="_on_PlayerColllider_body_entered"]
[connection signal="body_exited" from="PlayerColllider" to="." method="_on_PlayerColllider_body_exited"]
[connection signal="finished" from="Announcer" to="." method="_on_Announcer_finished"]
